# umcu-uploader

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  config.py  dataset-all-defaultmetadata.json  dataset-minimal-metadata.json  dv_ids.json  dv_metadata.json  pyproject.toml  run.py  uploader.ini  view_collection.html
.github/workflows/: main.yaml
data/: dataverses.csv  dv_metadata.json
requirements/: base.txt  test.txt
src/app/: app.py  licence
src/app/static/: styles.css
src/app/templates/: index.html
uploader/: __init__.py  configutil.py  job.py  navbar.py
uploader/Archivematica/: jobs.py  views.py
uploader/Archivematica/templates/: upload.html
uploader/Dataverse/: helpers.py  jobs.py  views.py
uploader/Dataverse/templates/: dataverse.html
uploader/Job/: views.py
uploader/Job/templates/: detail.html  index.html  job.html
uploader/Metadata/: __init__.py  arc_metadata.py  dataverse_metadata.py  form.py  form_class.py  helpers.py  validate_form.py  views.py
uploader/Metadata/templates/: metadata.html
uploader/Metadata/tp/: metadata.json
uploader/Navigator/: permissions.py  test_permissions.py  views.py
uploader/Navigator/templates/: files.html
uploader/Transfer/: helpers.py  views.py
uploader/Transfer/templates/: transfer.html
uploader/Upload/: job.py  jobs.py  views.py
uploader/Upload/templates/: upload.html
uploader/navbar/: __init__.py
uploader/static/: metadataform.js  upload.js
uploader/templates/: base.html
uploader/tests/: test_metadata.py
uploader/tests/data/: dataset-finch1.json  dv_test_metadata.json  response.json  test_response.json
