[tool.poetry]
name = "umcu-uploader"
version = "0.1.0"
description = "Preserves research data with Archivematica and publishes to Dataverse."
authors = [
"Joel Simpson <joelsimpson@artefactual.com>",
"Mike Cantelon <mike@artefactual.com>", 
"Keith Noel <knoel@artefactual.com>",
]
readme = "README.md"
packages = [{include = "uploader"}]
repository = "https://github.com/artefactual-labs/umcu-uploader"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-API = "^3.0.post1"
metsrw = "^0.3.22"
natsort = "^8.2.0"
pyaml = "^21.10.1"
pyDataverse = "^0.3.1"
requests = "^2.28.1"
py7zr = "^0.20.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
