[tool.poetry]
name = "umcu-uploader"
version = "0.1.0"
description = "Preserves research data with Archivematica and publishes to Dataverse."
authors = [
"Joel Simpson <joelsimpson@artefactual.com>",
"Mike Cantelon <mike@artefactual.com>",
"Keith Noel <knoel@artefactual.com>",
]
readme = "README.md"
packages = [{include = "uploader"}]
repository = "https://github.com/artefactual-labs/umcu-uploader"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Flask-API = { git = "https://github.com/flask-api/flask-api/", rev = "c1f99c6c7621c2605a79767536c151729ffa7711" }
metsrw = "^0.5.0"
natsort = "^8.2.0"
pyaml = "^23.9.7"
pyDataverse = "^0.3.1"
requests = "^2.28.1"
py7zr = "^0.20.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
